syntax = "proto3";

package protoim;

option go_package = "./;protoim";

message GetUserInfoRequest {
  int32 uid = 1;
}
